# smolder

./: Cargo.toml  build.rs  xast.rs
smolder-bindings/: Cargo.toml  bindings.rs
smolder-vulkan-sys/: Cargo.toml  build.rs
smolder-vulkan-sys/examples/: loader.rs
smolder-vulkan-sys/src/: ffi.rs  lib.rs  mem.rs  safe_ffi.rs
src/: bitmask.rs  ffi.rs  handles.rs  lib.rs  mem.rs  types.rs
vulkan-api-registry/: Cargo.toml
vulkan-api-registry/examples/: vk.rs
vulkan-api-registry/src/: iter_util.rs  lib.rs  vk_platform.rs  xast.rs  xml_iter.rs  xmlutil.rs
